fix overflow

--- a/src/style/OrderForm.css
+++ b/src/style/OrderForm.css
@@ -31,7 +31,7 @@
     color: gray;
     text-align: center;
     height:120px;
-    width: 5vw;
+    width: 4vw;
     vertical-align: middle;
 }
 
@@ -66,7 +66,7 @@
     padding-top: 10px;
     line-height: 24px;
     overflow: hidden;
-    max-height: 50px;
+    max-height: 60px;
 }
 
 .hidden {
